# zindle

./: Cargo.toml  LICENSE  README.md  scratch.md
.github/workflows/: rust.yml
docs/: ai-generation.md  configuration.md  language.md  overview.md
examples/: catan.md  chess.md
src/: configuration.rs  generated.rs  main.rs  processor.rs  runtime.rs  scripts.rs  utilities.rs  values.rs
src/configuration/: collection.rs
src/scripts/: collection.rs  content.rs  version.rs
