[package]
name = "zindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
derive_builder = "0.12.0"
maplit = "1.0.2"
md5 = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
typenum = "1.17.0"
